--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">EStoreApp</string>
+    <string name="app_name">E-Store</string>
+    <string name="btn_checkout">Go to Checkout</string>
+    <string name="btn_add_to_cart">Add to Cart</string>
+    <string name="btn_place_order">Place Order</string>
+    <string name="order_success">Your Order has been accepted</string>
+    <string name="track_order">Track Order</string>
+    <string name="back_to_home">Back to Home</string>
 </resources>
